test/force-app/main/default/objects/Proxy_Projet__c/Proxy_Projet__c.object-meta.xml
<CustomObject>
    <label>Proxy Projet</label>
    <nameField>
        <label>Proxy Projet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proxy Projets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>