test/force-app/main/default/objects/Proxy_Projet__c/fields/Architecte_EG_Contact__c.field-meta.xml
<CustomField>
    <fullName>Architecte_EG_Contact__c</fullName>
    <label>Architecte EG Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>