test/force-app/main/default/objects/Proxy_Projet__c/fields/Compte_Maitre_Ouvrage_Triviso_ID__c.field-meta.xml
<CustomField>
    <fullName>Compte_Maitre_Ouvrage_Triviso_ID__c</fullName>
    <label>Compte Maitre Ouvrage Triviso ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>