test/force-app/main/default/objects/Proxy_Projet__c/fields/Date_Ouverture_Projet__c.field-meta.xml
<CustomField>
    <fullName>Date_Ouverture_Projet__c</fullName>
    <label>Date Ouverture Projet</label>
    <type>Date</type>
</CustomField>