test/force-app/main/default/objects/Proxy_Projet__c/fields/Date_Reception__c.field-meta.xml
<CustomField>
    <fullName>Date_Reception__c</fullName>
    <label>Date Reception</label>
    <type>DateTime</type>
</CustomField>