test/force-app/main/default/objects/Proxy_Projet__c/fields/Facturation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facturation_Contact__c</fullName>
    <label>Facturation Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>