test/force-app/main/default/objects/Proxy_Projet__c/fields/Famille_Commerciale__c.field-meta.xml
<CustomField>
    <fullName>Famille_Commerciale__c</fullName>
    <label>Famille Commerciale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>