test/force-app/main/default/objects/Proxy_Projet__c/fields/Genre_Projet__c.field-meta.xml
<CustomField>
    <fullName>Genre_Projet__c</fullName>
    <label>Genre Projet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>