test/force-app/main/default/objects/Proxy_Projet__c/fields/Id_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Id_Salesforce__c</fullName>
    <label>Id Salesforce</label>
    <length>225</length>
    <type>Text</type>
</CustomField>