test/force-app/main/default/objects/Proxy_Projet__c/fields/Maitre_d_ouvrage_Contact__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_ouvrage_Contact__c</fullName>
    <label>Maître d&apos;Ouvrage Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>