test/force-app/main/default/objects/Proxy_Projet__c/fields/Montant_Correction_confirm__c.field-meta.xml
<CustomField>
    <fullName>Montant_Correction_confirm__c</fullName>
    <label>Montant Correction confirmé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>