test/force-app/main/default/objects/Proxy_Projet__c/fields/Montant_Facture__c.field-meta.xml
<CustomField>
    <fullName>Montant_Facture__c</fullName>
    <label>Montant Facture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>