test/force-app/main/default/objects/Proxy_Projet__c/fields/Montant_Net_Sans_Provision__c.field-meta.xml
<CustomField>
    <fullName>Montant_Net_Sans_Provision__c</fullName>
    <label>Montant Net Sans Provision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>