test/force-app/main/default/objects/Proxy_Projet__c/fields/Montant_Offert__c.field-meta.xml
<CustomField>
    <fullName>Montant_Offert__c</fullName>
    <label>Montant Offert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>