test/force-app/main/default/objects/Proxy_Projet__c/fields/Nom_Projet__c.field-meta.xml
<CustomField>
    <fullName>Nom_Projet__c</fullName>
    <label>Nom Projet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>