test/force-app/main/default/objects/Proxy_Projet__c/fields/Potentiel_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Potentiel_Facturation__c</fullName>
    <label>Potentiel Facturation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>