test/force-app/main/default/objects/Proxy_Projet__c/fields/Reference_Client__c.field-meta.xml
<CustomField>
    <fullName>Reference_Client__c</fullName>
    <label>Reference Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>