test/force-app/main/default/objects/Proxy_Projet__c/fields/SAIS_COM_ADR_RESP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAIS_COM_ADR_RESP_ID__c</fullName>
    <label>SAIS COM ADR Resp ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>