test/force-app/main/default/objects/Proxy_Projet__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Numero_Projet__c</columns>
    <columns>SAIS_COM_ADR_COMPTE_ID__c</columns>
    <columns>ID_Etape_Projet__c</columns>
    <columns>Action__c</columns>
    <columns>Statut__c</columns>
    <columns>Date_Traitement__c</columns>
    <columns>Id_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>