test/force-app/main/default/objects/Proxy_Projet__c/listViews/TestPojet.listView-meta.xml
<ListView>
    <fullName>TestPojet</fullName>
    <columns>NAME</columns>
    <columns>Numero_Projet__c</columns>
    <columns>SAIS_COM_ADR_COMPTE_ID__c</columns>
    <columns>Compte_Facturation_Triviso_ID__c</columns>
    <columns>Action__c</columns>
    <columns>Statut__c</columns>
    <columns>Date_Traitement__c</columns>
    <columns>Id_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Reçu,Erreur</value>
    </filters>
    <label>TestPojet</label>
</ListView>